# arrow-sus

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  AGENT.md  README.md  api.md  bootstrap.md  dbc_datasus.md  debug_ftp.py  extract_metadata.py  extracted_metadata.json  guidelines_python.md  hp_lib_plan.md  hpc.md  implementation_plan.md  main.py  mkdocs.yml  mypy.ini  plan.md  polars_plugins_implementation_plan.md  pyproject.toml  python_structure.md  references.md  ruff.toml  rust_structure.md  test_config.py  test_logger.py  workspace.toml
a_sus_logs/: app_20250614_221748.log.jsonl  app_20250614_222510.log.jsonl  app_20250614_222520.log.jsonl  app_20250614_222633.log.jsonl  app_20250614_222710.log.jsonl  app_20250614_222722.log.jsonl  app_20250614_223640.log.jsonl  app_20250614_223849.log.jsonl  app_20250614_224024.log.jsonl  app_20250614_224055.log.jsonl  app_20250614_224140.log.jsonl  app_20250614_224208.log.jsonl  app_20250614_224239.log.jsonl  app_20250614_224319.log.jsonl  app_20250614_224333.log.jsonl  app_20250614_224643.log.jsonl  app_20250614_224709.log.jsonl  app_20250614_224748.log.jsonl  app_20250614_224937.log.jsonl  app_20250614_230554.log.jsonl  app_20250614_230646.log.jsonl  app_20250614_231031.log.jsonl  app_20250614_233638.log.jsonl  app_20250614_233833.log.jsonl  app_20250614_234049.log.jsonl  app_20250614_234228.log.jsonl  app_20250614_234432.log.jsonl  app_20250614_234536.log.jsonl  app_20250614_234949.log.jsonl  app_20250614_235021.log.jsonl  app_20250614_235914.log.jsonl  app_20250615_000150.log.jsonl  app_20250615_000342.log.jsonl  app_20250615_000530.log.jsonl  app_20250615_000554.log.jsonl  app_20250615_000633.log.jsonl  app_20250615_000646.log.jsonl  app_20250615_000656.log.jsonl  app_20250615_000708.log.jsonl  app_20250615_000714.log.jsonl  (+259 more)
arrow-sus-rs/: Cargo.toml  pyproject.toml
arrow-sus-rs/src/: lib.rs
arrow-sus-rs/src/arrow_sus_rs/: __init__.py
components/a_sus/safe/: __init__.py
docs/: download_module.md
examples/: cli_usage.md  high_performance_metadata.py  integration_patterns.py  production_monitoring.py  test_imports.py
reference/rust/ftp/ftp/: file_handle.md
returns/: requires_context.md
rust/: Cargo.toml
rust/crates/data_client/: Cargo.toml
rust/crates/etl_pipeline/: Cargo.toml
rust/crates/ftp_mirror/: Cargo.toml
rust/crates/lakefs_client/: Cargo.toml
rust/crates/python_bindings/: Cargo.toml
rust/crates/shared/: Cargo.toml  README_DIRECTORY_IMPLEMENTATION.md
rust/crates/shared/demo_downloads/batch/: 01_CHBR1901.dbc  02_CHBR1902.dbc  03_CHBR1903.dbc  04_CHBR1904.dbc  05_CHBR1905.dbc
rust/crates/shared/examples/: cache_debug_test.rs  cache_performance_test.rs  datasus_comprehensive_recursive_test.rs  datasus_file_exploration.rs  datasus_ftp_deep_test.rs  datasus_ftp_live_test.rs  datasus_multiple_dirs.rs  direct_download_test.rs  directory_example.rs  download_demo.rs  ftp_directory_example.rs  ftp_strategy_example.rs  multi_provider_example.rs  namespace_test.rs  new_parallel_api_test.rs  parallel_performance_demo.rs  recursive_listing_test.rs  simple_directory_example.rs  simple_directory_test.rs  simple_download_demo.rs  utils_example.rs  working_download_demo.rs
rust/crates/shared/src/: lib.rs
rust/crates/shared/src/errors/: mod.rs
rust/crates/shared/src/models/: async_utils.rs  date_utils.rs  dbase_utils.rs  dir.py  directory.rs  download.rs  file.py  file.rs  file_info.py  file_info.rs  ftp_connection_manager.rs  ftp_manager.rs  ftp_strategy.rs  geo_utils.rs  integration_tests.rs  mod.rs  regex_patterns.rs  strategy.rs  strategy_integration_tests.rs  subsystem.rs  utils.py  utils.rs
rust/crates/shared/src/models/group_info/: mod.rs
rust/crates/shared/src/models/polars_utils/: mod.rs
rust/crates/shared/src/models/polars_utils/dbase_pl/: des.rs  describe.rs  downcast.rs  error.rs  interface.rs  mappings.rs  mod.rs  read.rs  scan.rs  utilities.rs  write.rs
rust/crates/shared/src/schemas/: mod.rs
rust/crates/shared/test_downloads/: ERMT2503.dbc  RJAC0903.dbc  RJAL1304.dbc  RJAM1711.dbc
rust/crates/snapshot_builder/: Cargo.toml
rust/examples/: download_test.rs  gradient_download_demo.rs  parallel_download_demo.rs  rich_download_demo.rs
src/arrow_sus/: __init__.py
src/arrow_sus/log/: __init__.py  logger.py
src/arrow_sus/log/config/: catppuccin_stderr_json_file.yml  queued_stderr_json_file.yml
src/arrow_sus/metadata/: __init__.py  cli.py
src/arrow_sus/metadata/core/: __init__.py  client.py  config.py  errors.py  models.py  updater.py
src/arrow_sus/metadata/data/: __init__.py  mappings.py
src/arrow_sus/metadata/io/: __init__.py  async_ftp.py
src/arrow_sus/metadata/systems/: __init__.py  base.py  monthly_system.py  pce_system.py  po_system.py  siscolo_system.py  yearly_system.py
src/arrow_sus/metadata/utils/: __init__.py  cache.py  dict_validation.py  filters.py  validation.py
src/arrow_sus/metadata/utils/monthly/: __init__.py  monthly_file_filter.py  monthly_file_parser.py
src/arrow_sus/metadata/utils/pce/: __init__.py  pce_file_filter.py  pce_file_parser.py
src/arrow_sus/metadata/utils/po/: __init__.py  po_file_filter.py  po_file_parser.py
src/arrow_sus/metadata/utils/siscolo/: __init__.py  siscolo_file_filter.py  siscolo_file_parser.py
src/arrow_sus/metadata/utils/yearly/: __init__.py  yearly_file_filter.py  yearly_file_parser.py
src/arrow_sus/settings/datasus/: settings.py
sus-mirror/: Cargo.toml
sus-mirror/src/: main.rs
sus-mirror/src/models/: file_extensions.rs  file_info.rs  index.rs  mod.rs  months.rs  states.rs
sus-mirror/src/models/subsystems/: cih.rs  ciha.rs  cnes.rs  ibge.rs  mod.rs  pni.rs  resp.rs  sia.rs  sih.rs  sim.rs  sinan.rs  sinasc.rs  siscolo.rs  sismama.rs  sisprenatal.rs
test/: test_dummy.py
test/components/a_sus/safe/: test_core.py
