[project]
name = "arrow-sus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["arrow-sus-rs"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "polylith-cli>=1.30.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.1",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.11.13",
]

# PolyLith
# Build has to be done with hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# Make UV and Hatch aware of the PolyLith workspace
[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]
