[project]
name = "arrow-sus"
version = "0.1.0"
description = "Blazingly fast project to interact with SUS(Brazilian Unified Health System) written in Python with a tiny bit of Rust"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.6",
    "returns[compatible-mypy]>=0.21.0",
]

[tool.uv.workspace]
members = ["arrow-sus-rs"]

[tool.uv.sources]
mkdocstrings-python = { git = "https://github.com/pawamoy-insiders/mkdocstrings-python.git" }

[dependency-groups]
dev = [
    "griffe-fieldz>=0.2.1",
    "griffe-modernized-annotations>=1.0.8",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.14",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.1",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.11.13",
]
