[package]
name = "sus-mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.8.0" }
aws-sdk-s3 = "1.94.0"
aws-smithy-http = "0.62.1"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
phf = "0.12.1"
phf_codegen = "0.12.1"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
suppaftp = { version = "6.3.0", features = ["async-rustls"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
