[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
arrow = { version = "56.0.0", features = ["ipc", "chrono-tz", "ffi", "pyarrow"] }
chrono = { version = "0.4", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
thiserror = "2.0"
url = {version = "2.5.4", features = ["serde"]}
suppaftp = { version = "6.3.0", features = ["async-rustls"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
futures = "0.3.31"
regex = "1.11.1"
anyhow = "1.0.98"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
lazy_static = "1.4"
log = "0.4"
dirs = "5.0"
rayon = "1.10.0"
once_cell = "1.21.3"
kdam = {version = "0.6.3", features = ["derive", "rich", "rayon", "spinner", "gradient"]}
env_logger = "0.11"

[[example]]
name = "download_test"
path = "../../examples/download_test.rs"

[[example]]
name = "rich_download_demo"
path = "../../examples/rich_download_demo.rs"

[[example]]
name = "parallel_download_demo"
path = "../../examples/parallel_download_demo.rs"

[dev-dependencies]
tokio-test = "0.4"
