[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
arrow = { version = "56.0.0", features = ["ipc", "chrono-tz", "ffi", "pyarrow"] }
chrono = { version = "0.4", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
thiserror = "2.0"
url = {version = "2.5.4", features = ["serde"]}
suppaftp = { version = "6.3.0", features = ["async-rustls"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
futures = "0.3.31"
regex = "1.11.1"
anyhow = "1.0.98"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
lazy_static = "1.4"
log = "0.4"
dirs = "5.0"
rayon = "1.10.0"
once_cell = "1.21.3"
env_logger = "0.11"
num_cpus = "1.16"
indicatif = {version = "0.18.0", features = ["rayon"]}
console = "0.15"


[dev-dependencies]
tokio-test = "0.4"
